This NEWS file for dynrules covers a short overview about the latest changes.