@@ -93,7 +93,7 @@ ALL_EVENTS = (
     SDL_DROPFILE,
     SDL_USEREVENT,
     )
-    
+
 
 SDL_TEXTEDITINGEVENT_TEXT_SIZE = 32
 SDL_TEXTINPUTEVENT_TEXT_SIZE   = 32
